--- a/css/main.css
+++ b/css/main.css
@@ -14,22 +14,56 @@ body {
 }
 
 .banner {
+  justify-content: center;
+  display: flex;
+  position: fixed;
+  width: 100%;
   background-color: #2b3851;
+  height: 370px;
 }
 
 .robot {
+  top: 185px;
+  position: relative;
   width: 320px;
 }
 
 .robot-body {
+  position: absolute;
   width: 320px;
 }
 
 .robot-brain {
   width: 46px;
+  position: absolute;
+  left: 136px;
 }
 
 .robot-head-right,
 .robot-head-left {
   width: 125px;
+}
+
+.robot-head-right {
+  position: absolute;
+  left: 160px;
+  bottom: 237px;
+}
+
+.robot-head-left {
+  position: absolute;
+  right: 160px;
+  bottom: 237px;
+}
+
+.robot:hover .robot-head-left{
+  position:absolute;
+  bottom: 275px;
+  right: 190px;
+}
+
+.robot:hover .robot-head-right{
+  position:absolute;
+  bottom: 275px;
+  left: 190px;
 }
