--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body {
   position: fixed;
   width: 100%;
   background-color: #2b3851;
-  height: 250px;
+  height: 240px;
 }
 
 .robot {
@@ -68,4 +68,10 @@ body {
   position: absolute;
   bottom: 275px;
   left: 190px;
+}
+
+.robot:hover .robot-brain {
+  position: absolute;
+  left: 136px;
+  bottom: 290px;
 }
